<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Helloworld</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Button_info_text">Klick mich ganz oft</string>
    <string name="Creator">JJ</string>
    <string name="page2button">naechste seite</string>
    <string name="title_activity_seite2">seite2</string>
    <string name="button_text">Bild laden und anzeigen</string>
    <string name="safe">speichern</string>
    <string name="load">laden</string>
    <string name="beschreibungedittext">eingegebener Text</string>
    <string name="Beschreibungsanzeige">text eingeben</string>

</resources>
