<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HelloWorld">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Klickmich"
        android:id="@+id/button"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/progressBar"
        android:indeterminate="false"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="77dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Creator"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/button"
        android:layout_marginBottom="38dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/page2button"
        android:text="@string/page2button"
        android:layout_below="@+id/progressBar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eingabe"
        android:layout_below="@+id/page2button"
        android:layout_alignStart="@+id/page2button"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:id="@+id/bild_button"
        android:layout_alignTop="@+id/eingabe"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView1"
        android:layout_alignTop="@+id/eingabe"
        android:layout_toEndOf="@+id/bild_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safe"
        android:id="@+id/safebutton"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="42dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:id="@+id/loadbutton"
        android:layout_below="@+id/safebutton"
        android:layout_alignStart="@+id/safebutton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beschreibungedittext"
        android:id="@+id/textView4"
        android:layout_below="@+id/loadbutton"
        android:layout_alignEnd="@+id/loadbutton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputtext"
        android:text="Eingegebener Text"
        android:layout_below="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginTop="25dp" />

</RelativeLayout>
